--- a/about.html
+++ b/about.html
@@ -9,6 +9,6 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <p>this is about company history and current situation</p>
 </body>
 </html>
